--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <meta name="viewport" content="width=device-width"></head><body><video controls="" autoplay="" name="media"><source src="https://github.com/Mr-funkinguy/FileUploader/blob/main/gummy_audiobounce.webm" type="video/webm"></video>
+    <meta name="viewport" content="width=device-width"></head><body><video controls="" autoplay="" name="media"><source src="https://github.com/Mr-funkinguy/FileUploader/blob/main/gummy_audiobounce.webm?raw=true" type="video/webm"></video>
   </body>
 </html>
